--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>waste Invaders </title>
+	<title>waste Invaders </title>
 	<style>
 		body {
 			margin: 0;
@@ -17,8 +17,10 @@
 	<script src="WebGLRenderer.js"></script>
 </head>
     <body>
+        <audio id="audio1" src="sound.mp3" preload="auto"></audio>
         <div class="textHolder" >
-            <img alt="" src="alexandria.jpg" width="6000" height="3500" />
+            <!img alt="" src="alexandria.jpg" width="6000" height="3500" />
+            <!img alt="" src="Floor.png" width="6000" height="3000" />
         </div>
         <script src="game2.js"></script>
     </body>
