adding the missing assets & cleaning the code

--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>waste Invaders </title>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			background-color: #FFFFFF;
-		}
-                
-		.textHolder{
-			width: 400px;
-		}
-	</style>
-	<script src="pixi.js"></script>
-	<script src="WebGLRenderer.js"></script>
+  <title>waste Invaders </title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #FFFFFF;
+    }
+
+    .textHolder{
+      width: 400px;
+    }
+  </style>
+  <script src="pixi.js"></script>
+  <script src="WebGLRenderer.js"></script>
 </head>
     <body>
-        <audio id="audio1" src="sound.mp3" preload="auto"></audio>
+        <audio id="audio1" src="media/sound.mp3" preload="auto"></audio>
         <div class="textHolder" >
-            <!img alt="" src="alexandria.jpg" width="6000" height="3500" />
-            <!img alt="" src="Floor.png" width="6000" height="3000" />
         </div>
-        <script src="game2.js"></script>
+        <script src="game.js"></script>
     </body>
 </html>
